--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
+    "react-responsive-carousel": "^3.1.51",
     "redux": "^4.0.5",
     "tailwindcss": "^1.2.0"
   },
