--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "postcss-import": "^12.0.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-mentions": "^3.3.1",
     "react-redux": "^7.2.0",
     "react-responsive-carousel": "^3.1.51",
+    "react-textarea-autosize": "^7.1.2",
     "redux": "^4.0.5",
     "tailwindcss": "^1.2.0"
   },
