--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "axios": "^0.19.2",
+    "croppie": "^2.6.4",
     "next": "^9.3.1",
     "postcss-import": "^12.0.1",
     "react": "^16.13.0",
