--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss-import": "^12.0.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-dropdown": "^1.7.0",
     "react-mentions": "^3.3.1",
     "react-redux": "^7.2.0",
     "react-responsive-carousel": "^3.2.4",
