--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.2",
     "body-scroll-lock": "^3.0.2",
     "croppie": "^2.6.4",
+    "fuse.js": "^5.2.3",
     "javascript-time-ago": "^2.0.7",
     "next": "^9.3.1",
     "postcss-import": "^12.0.1",
