--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "axios": "^0.19.2",
     "body-scroll-lock": "^3.0.2",
+    "compressorjs": "^1.0.6",
     "croppie": "^2.6.4",
     "fuse.js": "^5.2.3",
     "ipfs-http-client": "^44.0.3",
     "javascript-time-ago": "^2.0.7",
+    "mime-to-extensions": "^1.0.2",
     "next": "^9.3.1",
     "postcss-import": "^12.0.1",
     "react": "^16.13.0",
