--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^9.3.1",
     "postcss-import": "^12.0.1",
     "react": "^16.13.0",
+    "react-content-loader": "^5.0.4",
     "react-dom": "^16.13.0",
     "react-dropdown": "^1.7.0",
     "react-mentions": "^3.3.1",
