--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "deploy:contract": "near deploy",
     "dev": "nodemon --watch assembly -e ts --exec \"npm run build:contract && npm run dev:deploy:contract && env-cmd -f ./neardev/dev-account.env next dev\"",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test:contract": "asp",
+    "dev:contract": "nodemon --watch assembly -e ts --exec asp"
   },
   "author": "",
   "license": "ISC",
@@ -40,7 +42,7 @@
   "devDependencies": {
     "assemblyscript": "^0.9.4",
     "env-cmd": "^10.1.0",
-    "near-sdk-as": "^0.3.2",
+    "near-sdk-as": "git+https://github.com/near/near-sdk-as.git#block-timestamp",
     "near-shell": "^0.23.1",
     "nodemon": "^2.0.3",
     "redux-devtools-extension": "^2.13.8",
