--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,28 @@ node_modules
 .next
 
 db.json
+package-lock.json
+/node_modules
+/.pnp
+.pnp.js
+/out
+
+#keys
+/neardev
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
