--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-content-loader": "^5.0.4",
     "react-dom": "^16.13.0",
     "react-dropdown": "^1.7.0",
-    "react-infinite-scroller": "^1.2.4",
+    "react-infinite-scroll-component": "^5.0.4",
     "react-mentions": "^3.3.1",
     "react-redux": "^7.2.0",
     "react-responsive-carousel": "^3.2.4",
