--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "postcss-import": "^12.0.1",
     "react": "^16.13.0",
     "react-content-loader": "^5.0.4",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.0",
     "react-dropdown": "^1.7.0",
     "react-infinite-scroll-component": "^5.0.4",
