--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^16.13.0",
     "react-dropdown": "^1.7.0",
     "react-infinite-scroll-component": "^5.0.4",
+    "react-intersection-observer": "^8.26.2",
     "react-mentions": "^3.3.1",
     "react-redux": "^7.2.0",
     "react-responsive-carousel": "^3.2.4",
