--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mime-to-extensions": "^1.0.2",
     "near-api-js": "^0.24.0",
     "next": "^9.3.1",
+    "page-metadata-parser": "^1.1.4",
     "postcss-import": "^12.0.1",
     "pure-react-carousel": "git+https://github.com/hdriqi/pure-react-carousel.git",
     "react": "^16.13.0",
