--- a/package.json
+++ b/package.json
@@ -26,14 +26,13 @@
     "fuse.js": "^5.2.3",
     "ipfs-http-client": "^44.0.3",
     "javascript-time-ago": "^2.0.7",
-    "mime-to-extensions": "^1.0.2",
     "near-api-js": "^0.24.0",
     "next": "^9.3.1",
-    "page-metadata-parser": "^1.1.4",
     "postcss-import": "^12.0.1",
     "pure-react-carousel": "git+https://github.com/hdriqi/pure-react-carousel.git",
     "react": "^16.13.0",
     "react-content-loader": "^5.0.4",
+    "react-css-loaders": "0.0.5",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.0",
     "react-dropdown": "^1.7.0",
@@ -41,9 +40,6 @@
     "react-intersection-observer": "^8.26.2",
     "react-mentions": "^3.3.1",
     "react-redux": "^7.2.0",
-    "react-responsive-carousel": "^3.2.4",
-    "react-textarea-autosize": "^7.1.2",
-    "react-touch-carousel": "^0.9.4",
     "redux": "^4.0.5",
     "tailwindcss": "^1.2.0"
   },
