--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "near-api-js": "^0.24.0",
     "next": "^9.3.1",
     "postcss-import": "^12.0.1",
+    "prop-types": "^15.7.2",
     "pure-react-carousel": "git+https://github.com/hdriqi/pure-react-carousel.git",
     "react": "^16.13.0",
     "react-content-loader": "^5.0.4",
