--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-intersection-observer": "^8.26.2",
     "react-mentions": "^3.3.1",
     "react-redux": "^7.2.0",
+    "react-select": "^3.1.0",
     "redux": "^4.0.5",
     "tailwindcss": "^1.2.0"
   },
