--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "compressorjs": "^1.0.6",
     "croppie": "^2.6.4",
     "fuse.js": "^5.2.3",
+    "initials": "^3.1.0",
     "ipfs-http-client": "^44.0.3",
     "javascript-time-ago": "^2.0.7",
     "near-api-js": "^0.24.0",
@@ -36,7 +37,6 @@
     "react-css-loaders": "0.0.5",
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^16.13.0",
-    "react-dropdown": "^1.7.0",
     "react-infinite-scroll-component": "^5.0.4",
     "react-intersection-observer": "^8.26.2",
     "react-mentions": "^3.3.1",
