--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "initials": "^3.1.0",
     "ipfs-http-client": "^44.0.3",
     "javascript-time-ago": "^2.0.7",
+    "js-base64": "^2.5.2",
     "near-api-js": "^0.25.1",
     "next": "^9.3.1",
     "postcss-import": "^12.0.1",
