--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "js-base64": "^2.5.2",
     "near-api-js": "^0.25.1",
     "next": "^9.3.1",
+    "next-offline": "^5.0.2",
+    "next-pwa": "^2.6.1",
     "postcss-import": "^12.0.1",
     "prop-types": "^15.7.2",
     "pure-react-carousel": "git+https://github.com/hdriqi/pure-react-carousel.git",
