--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ipfs-http-client": "^44.0.3",
     "javascript-time-ago": "^2.0.7",
     "js-base64": "^2.5.2",
+    "jsbi": "^3.1.3",
     "near-api-js": "^0.25.1",
     "next": "^9.3.1",
     "next-offline": "^5.0.2",
