--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-select": "^3.1.0",
     "react-tooltip": "^4.2.7",
     "redux": "^4.0.5",
+    "retry-axios": "^2.2.1",
     "tailwindcss": "^1.2.0"
   },
   "devDependencies": {
