--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@coingecko/cryptoformat": "^0.3.4",
     "@evius/pure-react-carousel": "0.0.0-semantically-released",
     "@fullhuman/postcss-purgecss": "^2.1.0",
+    "@next/bundle-analyzer": "^9.4.4",
     "axios": "^0.19.2",
     "body-scroll-lock": "^3.0.2",
     "compressorjs": "^1.0.6",
@@ -36,7 +36,6 @@
     "next-pwa": "^2.6.1",
     "postcss-import": "^12.0.1",
     "prop-types": "^15.7.2",
-    "pure-react-carousel": "git+https://github.com/hdriqi/pure-react-carousel.git",
     "react": "^16.13.0",
     "react-content-loader": "^5.0.4",
     "react-css-loaders": "0.0.5",
