--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon --watch assembly -e ts --exec \"npm run build:contract && npm run dev:deploy:contract && env-cmd -f ./neardev/dev-account.env next dev\"",
     "dev:web": "next dev",
     "build:web": "CONTRACT_NAME=contract-alpha.paras.testnet next build",
+    "build:web:analyze": "CONTRACT_NAME=contract-alpha.paras.testnet ANALYZE=true next build",
     "start:web": "next start",
     "test:contract": "asp",
     "dev:contract": "nodemon --watch assembly -e ts --exec asp"
