--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "javascript-time-ago": "^2.0.7",
     "js-base64": "^2.5.2",
     "jsbi": "^3.1.3",
-    "near-api-js": "^0.25.1",
+    "near-api-js": "0.27.0",
     "next": "^9.3.1",
     "next-offline": "^5.0.2",
     "next-pwa": "^2.6.1",
