--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-tooltip": "^4.2.7",
     "redux": "^4.0.5",
     "retry-axios": "^2.2.1",
+    "sharer.js": "^0.4.0",
     "tailwindcss": "^1.2.0"
   },
   "devDependencies": {
